--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="content"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
