--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Awsome Chat</title>
+    <title>Awesome Chat</title>
     <meta name="description" content="">
   </head>
   <body>
